--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-GitPython
-PyGithub
-matrix-nio
-transformers
-huggingface-hub
-typer
-rich
-typing-extensions
-toml
-uv
-chardet
+GitPython==3.1.45
+PyGithub==2.8.1
+matrix-nio==0.25.2
+transformers==4.57.3
+huggingface-hub==0.36.0
+typer==0.20.1
+rich==14.2.0
+typing-extensions==4.15.0
+toml==0.10.2
+uv==0.9.24
+chardet==5.2.0
